# TEC-Royale

./: .gitignore  CMakeLists.txt  DataStructures.c  DataStructures.h  Makefile  README.md  Table.c  Table.h  Warrior.c  Warrior.h  borrador_conexion_cliente_juego.h  client.c  errorCodes.h  ini.c  ini.h  lottery_sched.c  lottery_sched.h  main.c  my_mutex.c  my_mutex.h  my_thread.c  my_thread.h  realtime_sched.c  realtime_sched.h  roundRobin_sched.c  roundRobin_sched.h  sched_manager.c  sched_manager.h  scheduler.c  scheduler.h  server.c  thread_structure.c  thread_structure.h
